Bug 443609 - Advanced keyboard options are broken on X11
Summary: Advanced keyboard options are broken on X11
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keyboard (show other bugs)
Version: master
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: Cyril Rossi
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-10-11 18:59 UTC by Nate Graham
Modified: 2021-12-28 17:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-10-11 18:59:24 UTC
I use the XKB option "Alt and Win behavior / Win is mapped to PrtSc and the usual Win" on the Advanced tab of the keyboard KCM

This has worked for over a year. Sometime in the last 2 weeks, though, it has stopped functioning properly on X11. This does not happen on Wayland; everything works there. Only X11 is affected.

I suspect the recent KConfigXT port is to blame, but will bisect to be sure.
Comment 1 Nate Graham 2021-10-11 19:06:08 UTC
Indeed, git bisect confirms that this was caused by the KCM port in https://invent.kde.org/plasma/plasma-desktop/-/commit/dd5db629ed99a97ed4753731d742afe752d1423b.

Cyril, can you please take a look?
Comment 2 Bug Janitor Service 2021-10-20 09:32:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/617
Comment 3 Nate Graham 2021-11-10 18:55:38 UTC
Git commit bc0782aca7e82afc7c4d131fc5efa394b72bf8f1 by Nate Graham, on behalf of Cyril Rossi.
Committed on 10/11/2021 at 18:55.
Pushed by ngraham into branch 'master'.

KCM Keyboard: resetOlbXkbOptions should not be a kconfig entry

M  +1    -1    kcms/keyboard/kcm_keyboard.ui
M  +18   -11   kcms/keyboard/kcm_keyboard_widget.cpp
M  +1    -1    kcms/keyboard/keyboard_config.cpp
M  +0    -3    kcms/keyboard/keyboardsettings.kcfg
M  +6    -4    kcms/keyboard/xkb_helper.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/bc0782aca7e82afc7c4d131fc5efa394b72bf8f1
Comment 4 Fabian Vogt 2021-12-28 15:44:49 UTC
Git commit 59406f88eb76e1ba319b54efcb07102b16d84961 by Fabian Vogt.
Committed on 28/12/2021 at 11:16.
Pushed by fusionfuture into branch 'master'.

[kcms/keyboard] Fix setting options on X11

It was missing the empty parameter for "-option ''" to trigger the reset,
resulting in an invalid commandline for setxkbmap, e.g.
setxkbmap -option -option compose:caps.

M  +2    -0    kcms/keyboard/xkb_helper.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/59406f88eb76e1ba319b54efcb07102b16d84961
Comment 5 Fabian Vogt 2021-12-28 17:58:57 UTC
Git commit 90b27ab4170a2b9d6c2c2209874089ad9b52e2aa by Fabian Vogt.
Committed on 28/12/2021 at 17:55.
Pushed by fvogt into branch 'Plasma/5.23'.

[kcms/keyboard] Fix setting options on X11

It was missing the empty parameter for "-option ''" to trigger the reset,
resulting in an invalid commandline for setxkbmap, e.g.
setxkbmap -option -option compose:caps.
(cherry picked from commit 59406f88eb76e1ba319b54efcb07102b16d84961)

M  +3    -0    kcms/keyboard/xkb_helper.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/90b27ab4170a2b9d6c2c2209874089ad9b52e2aa