KCM Keyboard: resetOlbXkbOptions should not be a kconfig entry

BUG: 443609