kcms/keyboard/kcm_keyboard_widget.cpp
@@ -118,6 +118,7 @@ void KCMKeyboardWidget::defaults()
     updateSwitcingPolicyUI(keyboardConfig->defaultSwitchingPolicyValue());
     auto *xkbOptionModel = dynamic_cast<XkbOptionsTreeModel *>(uiWidget->xkbOptionsTreeView->model());
     xkbOptionModel->setXkbOptions(keyboardConfig->defaultXkbOptionsValue());
+    uiWidget->configureKeyboardOptionsChk->setChecked(!keyboardConfig->defaultXkbOptionsValue().empty());
     keyboardConfig->setDefaults();
 }
 
@@ -133,7 +134,7 @@ bool KCMKeyboardWidget::isDefault() const
 {
     return keyboardModelFromUI() == keyboardConfig->defaultKeyboardModelValue() &&
             switcingPolicyFromUI() == keyboardConfig->defaultSwitchingPolicyValue() &&
-            xkbOptionsFromUI() == keyboardConfig->xkbOptions();
+            xkbOptionsFromUI() == keyboardConfig->defaultXkbOptionsValue();
 }
 
 void KCMKeyboardWidget::setDefaultIndicator(bool visible)
@@ -165,6 +166,7 @@ void KCMKeyboardWidget::updateUI()
     updateSwitcingPolicyUI(keyboardConfig->switchingPolicy());
     XkbOptionsTreeModel *model = dynamic_cast<XkbOptionsTreeModel *>(uiWidget->xkbOptionsTreeView->model());
     model->setXkbOptions(keyboardConfig->xkbOptions());
+    uiWidget->configureKeyboardOptionsChk->setChecked(!keyboardConfig->xkbOptions().empty());
     updateLayoutsUI();
     updateShortcutsUI();
     layoutSelectionChanged();
@@ -519,8 +521,8 @@ void KCMKeyboardWidget::moveSelectedLayouts(int shift)
 void KCMKeyboardWidget::scrollToGroupShortcut()
 {
     this->setCurrentIndex(TAB_ADVANCED);
-    if (!uiWidget->kcfg_resetOldXkbOptions->isChecked()) {
-        uiWidget->kcfg_resetOldXkbOptions->setChecked(true);
+    if (!uiWidget->configureKeyboardOptionsChk->isChecked()) {
+        uiWidget->configureKeyboardOptionsChk->setChecked(true);
     }
     ((XkbOptionsTreeModel *)uiWidget->xkbOptionsTreeView->model())->gotoGroup(GROUP_SWITCH_GROUP_NAME, uiWidget->xkbOptionsTreeView);
 }
@@ -528,8 +530,8 @@ void KCMKeyboardWidget::scrollToGroupShortcut()
 void KCMKeyboardWidget::scrollTo3rdLevelShortcut()
 {
     this->setCurrentIndex(TAB_ADVANCED);
-    if (!uiWidget->kcfg_resetOldXkbOptions->isChecked()) {
-        uiWidget->kcfg_resetOldXkbOptions->setChecked(true);
+    if (!uiWidget->configureKeyboardOptionsChk->isChecked()) {
+        uiWidget->configureKeyboardOptionsChk->setChecked(true);
     }
     ((XkbOptionsTreeModel *)uiWidget->xkbOptionsTreeView->model())->gotoGroup(LV3_SWITCH_GROUP_NAME, uiWidget->xkbOptionsTreeView);
 }
@@ -581,14 +583,18 @@ void KCMKeyboardWidget::initializeXkbOptionsUI()
     uiWidget->xkbOptionsTreeView->setModel(model);
     connect(model, &QAbstractItemModel::dataChanged, this, &KCMKeyboardWidget::uiChanged);
 
-    connect(uiWidget->kcfg_resetOldXkbOptions, &QAbstractButton::toggled, this, &KCMKeyboardWidget::configureXkbOptionsChanged);
-    connect(uiWidget->kcfg_resetOldXkbOptions, &QAbstractButton::toggled, uiWidget->xkbOptionsTreeView, &QWidget::setEnabled);
+    connect(uiWidget->configureKeyboardOptionsChk, &QAbstractButton::toggled, this, &KCMKeyboardWidget::configureXkbOptionsChanged);
+    connect(uiWidget->configureKeyboardOptionsChk, &QAbstractButton::toggled, uiWidget->xkbOptionsTreeView, &QWidget::setEnabled);
 }
 
 void KCMKeyboardWidget::configureXkbOptionsChanged()
 {
-    if (uiWidget->kcfg_resetOldXkbOptions->isChecked() && keyboardConfig->xkbOptions().isEmpty()) {
+    if (uiWidget->configureKeyboardOptionsChk->isChecked() && keyboardConfig->xkbOptions().isEmpty()) {
         populateWithCurrentXkbOptions();
+    }
+    if (!uiWidget->configureKeyboardOptionsChk->isChecked()) {
+        auto *xkbOptionModel = dynamic_cast<XkbOptionsTreeModel *>(uiWidget->xkbOptionsTreeView->model());
+        xkbOptionModel->setXkbOptions(QStringList());
     }
     ((XkbOptionsTreeModel *)uiWidget->xkbOptionsTreeView->model())->reset();
     uiChanged();
@@ -596,7 +602,7 @@ void KCMKeyboardWidget::configureXkbOptionsChanged()
 
 void KCMKeyboardWidget::saveXkbOptions()
 {
-    if (uiWidget->kcfg_resetOldXkbOptions->isChecked()) {
+    if (uiWidget->configureKeyboardOptionsChk->isChecked()) {
         keyboardConfig->setXkbOptions(xkbOptionsFromUI());
     } else {
         keyboardConfig->setXkbOptions(QStringList());
@@ -630,7 +636,7 @@ void KCMKeyboardWidget::updateSwitcingPolicyUI(KeyboardConfig::SwitchingPolicy p
 void KCMKeyboardWidget::updateXkbShortcutButton(const QString &groupName, QPushButton *button)
 {
     QStringList grpOptions;
-    if (uiWidget->kcfg_resetOldXkbOptions->isChecked()) {
+    if (!keyboardConfig->xkbOptions().isEmpty()) {
         QRegExp regexp = QRegExp("^" + groupName + Rules::XKB_OPTION_GROUP_SEPARATOR);
         XkbOptionsTreeModel *model = dynamic_cast<XkbOptionsTreeModel *>(uiWidget->xkbOptionsTreeView->model());
         grpOptions = model->xkbOptions().filter(regexp);
@@ -721,7 +727,8 @@ void KCMKeyboardWidget::populateWithCurrentXkbOptions()
             xkbOptions.append(xkbOption);
         }
     }
-    keyboardConfig->setXkbOptions(xkbOptions);
+    auto *xkbOptionModel = dynamic_cast<XkbOptionsTreeModel *>(uiWidget->xkbOptionsTreeView->model());
+    xkbOptionModel->setXkbOptions(xkbOptions);
 }
 
 QString KCMKeyboardWidget::keyboardModelFromUI() const
